@@ -1,0 +1,25 @@
+language: perl
+perl:
+  - "5.14"
+  - "5.12"
+  - "5.10"
+env: PERL_CPANM_OPT="--notest --force --skip-satisfied"
+before_install:
+  # bootstrap modules needed to manipulate dist
+  - "cpanm Dist::Zilla"
+  - "cpanm Dist::Zilla::Plugin::MakeMaker::Awesome"
+  - "cpanm Pod::Weaver::Plugin::Encoding"
+  - "cpanm Pod::Weaver::Plugin::StopWords"
+  - "cpanm Pod::Weaver::Section::Support"
+  # needed for DZP::GitHub
+  - "git config --global github.user mjgardner"
+  # install packages for Alien::SVN
+  - "sudo apt-get update"
+  - "sudo apt-get install libapr1 libapr1-dev libaprutil1 libaprutil1-dev libaprutil1-dbd-sqlite3 libneon27-gnutls libneon27-gnutls-dev"
+  # install dist development dependencies
+  - "dzil authordeps | xargs cpanm"
+  - "export tmpbuild=`mktemp --directory`"
+  - "dzil build --in $tmpbuild"
+  - "perl -MCPAN::Meta -e '$,=\"\\n\"; print CPAN::Meta->load_file(\"$ENV{tmpbuild}/META.json\")->effective_prereqs->requirements_for(\"develop\", \"requires\")->required_modules' | xargs cpanm"
+install: "dzil listdeps | xargs cpanm"
+script: "dzil test --release"
