@@ -11,7 +11,7 @@ SVN::Tree - SVN::Fs + Tree::Path::Class
 
 =head1 VERSION
 
-version 0.004
+version 0.005
 
 =head1 SYNOPSIS
 
