@@ -6,10 +6,27 @@ copyright_holder = GSI Commerce
 [@Filter]
 -bundle = @Basic
 -remove = Readme
+-remove = MakeMaker
+[=inc::SVNMakeMaker / SVNMakeMaker]
 [AutoPrereqs]
 [Prereqs]
 perl = 5.010
-Alien::SVN = 1.6.12
+Alien::SVN = 0
+[Prereqs / DevelopRequires]
+Dist::Zilla = 0
+Dist::Zilla::Plugin::MakeMaker::Awesome = 0
+Pod::Weaver::Plugin::Encoding = 0
+Pod::Weaver::Plugin::StopWords = 0
+Pod::Weaver::Section::Support = 0
+;Task::Perl::Critic = 0
+Perl::Critic::Pulp = 0
+Perl::Critic::Lax = 0
+Perl::Critic::StricterSubs = 0
+Perl::Critic::Bangs = 0
+[Prereqs / DevelopRecommends]
+Test::EOL = 0
+[Prereqs / TestRecommends]
+Test::CPAN::Meta::JSON = 0
 [NextRelease]
 [PkgDist]
 [OurPkgVersion]
